--- a/apps/minefields/CMakeLists.txt
+++ b/apps/minefields/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_executable(example)
+add_executable(minefields)
 
 file(GLOB_RECURSE headers CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 
-target_sources(example PRIVATE ${headers} ${sources})
+target_sources(minefields PRIVATE ${headers} ${sources})
 
-target_link_libraries(example PRIVATE katas::example)
+target_link_libraries(minefields PRIVATE katas::minefields)
