--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,14 +10,15 @@
             "settings": {},
 
             "extensions": [
+                "cs128.cs128-clang-tidy",
+                "ms-azuretools.vscode-docker",
                 "ms-vscode.cpptools",
                 "ms-vscode.cmake-tools",
                 "ms-vscode.cpptools-extension-pack",
                 "piotrkosek.vscode-gtest-test-adapter-with-code-lens",
-                "ms-azuretools.vscode-docker",
-                "yzhang.markdown-all-in-one",
-                "github.copilot",
-                "github.copilot-chat"
+                "sonarsource.sonarlint-vscode",
+                "xaver.clang-format",
+                "yzhang.markdown-all-in-one"
             ]
         }
     }
