--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "cmake.configureSettings": {
+        "CMAKE_GENERATOR": "Ninja Multi-Config"
+    },
     "files.associations": {
         "*.tcc": "cpp",
         "*.ixx": "cpp",
@@ -65,5 +68,12 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp"
-    }
+    },
+    "editor.formatOnSave": true,
+    "C_Cpp.clang_format_style": "file",
+    "editor.defaultFormatter": "SonarSource.sonarlint-vscode",
+    "sonarlint.pathToCompileCommands": "${workspaceFolder}/build/compile_commands.json",
+    "[cpp]": {
+        "editor.defaultFormatter": "xaver.clang-format"
+    },
 }
