--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,9 @@
         "streambuf": "cpp",
         "thread": "cpp",
         "typeinfo": "cpp",
-        "unordered_set": "cpp"
+        "unordered_set": "cpp",
+        "cinttypes": "cpp",
+        "text_encoding": "cpp"
     },
     "editor.formatOnSave": true,
     "C_Cpp.clang_format_style": "file",
